Fix contrast tel and email and navbar link contrasts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,14 @@ h2 {
     width: 24px;
 }
 
+#navbar .nav-link {
+    color: aliceblue;
+}
+
+#navbar .active {
+    text-decoration: underline;
+}
+
 /* Header */
 #header .lead {
     font-family: var(--secondary-font);
